--- a/MainPage_V7.ui
+++ b/MainPage_V7.ui
@@ -1348,7 +1348,7 @@ QPushButton:pressed {
 }</string>
                 </property>
                 <property name="text">
-                 <string>FUNCTIONAL DIMENSION</string>
+                 <string>STRATEGIC DIMENSION</string>
                 </property>
                 <property name="icon">
                  <iconset resource="resources.qrc">
@@ -4154,7 +4154,7 @@ border: 0px solid #000000; /* Set a border for visibility */
 </string>
                </property>
                <property name="currentIndex">
-                <number>0</number>
+                <number>1</number>
                </property>
                <widget class="QWidget" name="default_16"/>
                <widget class="QWidget" name="default_17"/>
@@ -4206,7 +4206,7 @@ border: 0px solid #000000; /* Set a border for visibility */
              <property name="geometry">
               <rect>
                <x>0</x>
-               <y>-338</y>
+               <y>0</y>
                <width>918</width>
                <height>920</height>
               </rect>
@@ -4348,7 +4348,7 @@ li.checked::marker { content: &quot;\2612&quot;; }
                        <item>
                         <widget class="QLabel" name="ORR_Label">
                          <property name="text">
-                          <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p align=&quot;center&quot;&gt;&lt;span style=&quot; font-weight:700;&quot;&gt;OVERALL RATING&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+                          <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p align=&quot;center&quot;&gt;&lt;span style=&quot; font-weight:700;&quot;&gt;URBAN STORMWATER RESILIENCE INDEX&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
                          </property>
                          <property name="alignment">
                           <set>Qt::AlignCenter</set>
@@ -4407,7 +4407,7 @@ hr { height: 1px; border-width: 0; }
 li.unchecked::marker { content: &quot;\2610&quot;; }
 li.checked::marker { content: &quot;\2612&quot;; }
 &lt;/style&gt;&lt;/head&gt;&lt;body style=&quot; font-family:'Segoe UI'; font-size:9pt; font-weight:400; font-style:normal;&quot;&gt;
-&lt;p style=&quot; margin-top:12px; margin-bottom:12px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;span style=&quot; font-size:12pt; font-weight:700; color:#b0bea5;&quot;&gt;FUNCTIONAL DIMENSION&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+&lt;p style=&quot; margin-top:12px; margin-bottom:12px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;span style=&quot; font-size:12pt; font-weight:700; color:#b0bea5;&quot;&gt;STRATEGIC DIMENSION&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
                    </property>
                    <property name="alignment">
                     <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
